discussion/kv_engine/177009/177009_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Rename writeDocument to upsert

And let it be a member function to the MeteringTest class to avoid
the need of passing the connection.

Change-Id: Ice8415efd3c911a8ededa55eaa78ff51a6e6a598

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 12:34:36.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 15:18:23.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47331/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp_serverless/metering_test.cc(1202): error: Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[  FAILED  ] MeteringTest.MeterGetRandomKey (2 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47331/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18573/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:261:30: error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
                        std::this_thread::sleep_for(
                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18573/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:261:30:
error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18573/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20805/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T13:40:35.202Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/tests/testapp_serverless/metering_test.cc:1202: Failure
[2022-07-03T13:40:35.202Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T13:40:35.202Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (2 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20805/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21445/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T13:54:34.886Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp_serverless/metering_test.cc:1202: Failure
[2022-07-03T13:54:34.886Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T13:54:34.886Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (20 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21445/ )

ThreadSanitizer issue: thread leak (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x5be62) in __interceptor_pthread_create  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21445/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28838/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28838/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8244/ : FAILURE

Compile error at [2022-07-03T13:07:26.951Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/dcp_drain.cc:187:9:
error: use of undeclared identifier "EXPECT_TRUE"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8244/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8343/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T13:29:54.080Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp_serverless/metering_test.cc:1202: Failure
[2022-07-03T13:29:54.080Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T13:29:54.080Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (0 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8343/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20457/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T13:41:48.686Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp_serverless/metering_test.cc:1202: Failure
[2022-07-03T13:41:48.686Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T13:41:48.686Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (1 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20457/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19679/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction
[2022-07-03T14:52:53.395Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1331: Failure
[2022-07-03T14:52:53.395Z] Expected: (activeRR) < (100), actual: 100 vs 100
[2022-07-03T14:52:53.395Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (8547 ms)
EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19679/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17724/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39785/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
